RESOLVED FIXED26743
[CHROMIUM] Multiple ASSERT_NOT_REACHED reached in Chromium font code
https://bugs.webkit.org/show_bug.cgi?id=26743
Summary [CHROMIUM] Multiple ASSERT_NOT_REACHED reached in Chromium font code
Nicolas Sylvain
Reported 2009-06-25 17:16:29 PDT
This is a follow up for bug 26484 The problem fixed in bug 26484 appears at multiple other places in the codebase. Short description: Chromium may not be able to load fonts when the browser process is going down because of the sandbox restrictions (and the lack of help from the browser process). We have some asserts in this case. But since it happens often during shutdown, we want to replace these asserts for LOG messages. I will submit a patch for review.
Attachments
remove font asserts (5.13 KB, patch)
2009-06-26 11:12 PDT, Nicolas Sylvain
dglazkov: review+
Nicolas Sylvain
Comment 1 2009-06-26 11:12:07 PDT
Created attachment 31939 [details] remove font asserts
Dimitri Glazkov (Google)
Comment 2 2009-06-26 11:19:26 PDT
Comment on attachment 31939 [details] remove font asserts r=me.
Eric Seidel (no email)
Comment 3 2009-06-28 04:13:30 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/platform/graphics/chromium/FontChromiumWin.cpp M WebCore/platform/graphics/chromium/FontPlatformDataChromiumWin.cpp M WebCore/platform/graphics/chromium/GlyphPageTreeNodeChromiumWin.cpp M WebCore/platform/graphics/chromium/SimpleFontDataChromiumWin.cpp Committed r45325 http://trac.webkit.org/changeset/45325
Note You need to log in before you can comment on or make changes to this bug.