WebCore/platform/graphics/chromium/FontChromiumWin.cpp
@@ -394,7 +394,9 @@ void Font::drawGlyphs(GraphicsContext* graphicsContext,
             break;
         }
 
-        ASSERT(success);
+        if (!success)
+            LOG_ERROR("Unable to draw the glyphs after second attempt");
+
         curAdvance += curWidth;
     }
 }
